--- a/styles/style.css
+++ b/styles/style.css
@@ -176,11 +176,11 @@ a {
     border-radius: 30px;
     font-size: 16px;
 }
-
+/*
 .productos button:hover {
     background-color: #087a25;
 }
-
+*/
 .pie_de_pagina {
     display: flex;
     color: antiquewhite;
