--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,21 @@ selector {
 propiedad:valor
 }
 */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1; /* Esto empuja el footer hacia abajo */
+}
+
 h1{
     display:none;
 }
@@ -87,6 +102,7 @@ footer form{
 .pie_de_pagina img {
     width: 30px;
 }
+  
 p {
   color: rgb(1, 36, 7) ;
   font-size: 15px;
