--- a/styles/style.css
+++ b/styles/style.css
@@ -3,21 +3,6 @@ selector {
 propiedad:valor
 }
 */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-}
-
-main {
-    flex: 1; /* Esto empuja el footer hacia abajo */
-}
-
 h1{
     display:none;
 }
@@ -299,6 +284,30 @@ input[type="submit"]:hover {
       gap: 40px;
       flex-wrap: wrap;
     }
+
+    html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(177, 190, 184);
+}
+
+main {
+  flex: 1;
+  min-height: 80vh;
+  margin-bottom: 40px;
+}
+
+.pie_de_pagina {
+  padding: 20px;
+  background-color: #384b33;
+}
 
 @media (max-width: 768px) {
   section .tarjetas {
