--- a/styles/style.css
+++ b/styles/style.css
@@ -176,12 +176,15 @@ a {
     padding: 10px 20px;
     border-radius: 30px;
     font-size: 16px;
+    padding: 10px 20px;
+    transition: background-color 0.5s ease;
 }
-/*
+
 .productos button:hover {
     background-color: #087a25;
+    animation: beat 1s;
 }
-*/
+
 .pie_de_pagina {
     display: flex;
     color: antiquewhite;
@@ -310,6 +313,10 @@ main Cliente_Main{
 }
 
 @media (max-width: 768px) {
+
+  .fondo_encabezado {
+    height: 60vh; /* Ajuste para pantallas más chicas */
+  }
   section .tarjetas {
     grid-template-columns: 1fr; /* Una sola columna en móviles */
   }
