--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,4 +9,5 @@
 @import  'components/tarjetas';
 @import  'components/form';
 @import 'components/productos';
+@import 'components/beneficios';
 @import  'mediaqueries';
