--- a/styles/style.css
+++ b/styles/style.css
@@ -1,329 +1,17 @@
-/*select + propiedad + valor
-selector {
-propiedad:valor
-}
-*/
-h1{
-    display:none;
-}
-header nav {
-    display: flex;
-    color: antiquewhite;
-    background-color: rgba(0, 0, 0, 0.4);
-    align-items: center;
-    justify-content: space-between;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 7 | @import 'layout/header';
+ *   |         ^^^^^^^^^^^^^^^
+ *   '
+ *   styles\scss\style.scss 7:9  root stylesheet */
 
-header nav ul{
-    list-style: none;
-    display: flex;
-    gap:20px;
-    text-align: center;
-}
-.fondo_encabezado{
-  background-image: url(../assets/fondos/mate_paisaje_3.jpg);
-  background-size:cover ;
-  background-repeat: no-repeat;
-  height:90vh; /* Ajustá según necesites */
-  color: white;
-}
-
-header nav ul a{
-  background-color: #55704D; 
-  color: white;
-  padding: 8px 20px;
-  border: none;
-  border-radius: 6px;
-  font-weight: bold;
-  font-family: sans-serif;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  text-align: center;
-}
-
-header nav ul a:hover{
-  background-color: #103824; 
-  color: white;
-  padding: 8px 20px;
-  border: none;
-  border-radius: 6px;
-  font-weight: bold;
-  font-family: sans-serif;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 10px;
-  text-align: center;
-}
-
-#logo_principal {
-    width: 10%;
-    height: auto;
-    padding-right: 50px;
-}
-
-section .tarjetas {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-}
-
-footer{
-    background-color: #384b33;
-}
-
-footer h3{
-    color: beige;
-}
-
-footer p {
-    color: #add1b0;
-}
-
-footer form{
-    color: #add1b0;
-}
-
-.pie_de_pagina img {
-    width: 30px;
-}
-  
-p {
-  color: rgb(1, 36, 7) ;
-  font-size: 15px;
-  margin: 20px;
-  font-family:  "Oswald", sans-serif;
-}
-
-body{
-background-color: rgb(177, 190, 184);
-
-}
-
-.titulos{
-    text-decoration: none;
-    text-align: center;
-
-}
-
-
-ul{
-    list-style: none;
-    color: beige;
-    
-}
-
-.filtro_productos{
- color: rgb(1, 36, 7) ;   
-}
-
-a {
-    text-decoration: none;
-    color:beige;
-}
-
-.button{
-    color:white;
-    background-color: #1a581f;
-    border-radius: 20%;
-}
-
-#fondo_principal{
-    width: 100%;
-}
-
-.foto_descripcion_empresa{
-    border-radius: 40%;
-}
-
-.ppff{
-    margin: 3%;
-    border: 3px;
-    border-style:solid;
-    border-color: #031f05;
-}
-
-.bloque_productos{
-      display: flex;
-      justify-content:space-evenly;
-      gap: 40px;
-      flex-wrap: wrap;
-    
-}
-
-.productos{
-      background: rgb(241, 239, 239);
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 200px;
-      text-align: center;
-      padding: 10px;
-}
-
-.productos img {
-    height: 30vh;
-}
-
-.productos h3 {
-      margin: 15px 0 5px;
-      font-size: 20px;
-}
-
-.productos button {
-    background-color: #0a5e1b;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 30px;
-    font-size: 16px;
-    padding: 10px 20px;
-    transition: background-color 0.5s ease;
-}
-
-.productos button:hover {
-    background-color: #087a25;
-    animation: beat 1s;
-}
-
-.pie_de_pagina {
-    display: flex;
-    color: antiquewhite;
-    background-color: #384b33;
-    align-items: center;
-    justify-content: space-between; 
-}
-
-
-.pie_de_pagina_grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: start;
-  gap: 40px;
-}
-
-.pie_de_pagina_grid h3 {
-  margin-bottom: 10px;
-  font-size: 18px;
-  color: #fdf6dc;
-}
-
-.pie_de_pagina_copy {
-  text-align: right;
-  font-size: 14px;
-  margin-top: 20px;
-  color: #e0e0e0;
-}
-
-.sobrenosotros_principal {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 40px;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 40px;
-  align-items: center;
-}
-
-/*estilos para forms*/
-form {
-  max-width: 80%;
-  margin: auto;
-  background: #f7f7f7;
-  padding: 20px 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  font-family: 'Segoe UI', sans-serif;
-}
-
-label {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  margin-top: 15px;
-  margin-bottom: 5px;
-  color: #333;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-select {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  box-sizing: border-box;
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin-right: 5px;
-}
-
-input[type="submit"] {
-  background-color: #004400;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 6px;
-  margin-top: 20px;
-}
-
-input[type="submit"]:hover {
-  background-color: #006600;
-}
-
-    .carousel-item {
-      padding: 20px 0;
-    }
-    .brand-logo {
-      max-height: 80px;
-      object-fit: contain;
-    }
-    .carousel-inner {
-      text-align: center;
-    }
-    .brand-container {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      flex-wrap: wrap;
-    }
-
-    html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-}
-
-body .clientes{
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(177, 190, 184);
-}
-
-main Cliente_Main{
-  flex: 1;
-  min-height: 80vh;
-  margin-bottom: 40px;
-}
-
-.pie_de_pagina {
-  padding: 20px;
-  background-color: #384b33;
-}
-
-@media (max-width: 768px) {
-
-  .fondo_encabezado {
-    height: 60vh; /* Ajuste para pantallas más chicas */
-  }
-  section .tarjetas {
-    grid-template-columns: 1fr; /* Una sola columna en móviles */
-  }
-     header nav ul a{
-      color: whitesmoke;
- }
-      footer{
-        display:flex
-      }
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 7 \2502  @import 'layout/header';\a   \2502          ^^^^^^^^^^^^^^^\a   \2575 \a   styles\\scss\\style.scss 7:9  root stylesheet";
 }
