--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -5,6 +5,7 @@
 @import  '../scss/Layout/main';
 @import  '../scss/Layout/footer';
 @import  '../scss/Layout/header';
+@import  '../scss/Layout/ppff';
 
 @import  '../scss/components/tarjetas';
 @import  '../scss/components/form';
