--- a/styles/scss/Layout/_ppff.scss
+++ b/styles/scss/Layout/_ppff.scss
@@ -2,6 +2,7 @@
   max-width: 900px;
   margin: 40px auto;
   padding: 0 20px;
+  background-color: #b4e5af;
 
   .faq-item {
     background-color: #f9f9f9;
