--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,7 @@ header #logo_principal {
   max-width: 900px;
   margin: 40px auto;
   padding: 0 20px;
+  background-color: #b4e5af;
 }
 .faq-section .faq-item {
   background-color: #f9f9f9;
