--- a/styles/scss/Layout/_ppff.scss
+++ b/styles/scss/Layout/_ppff.scss
@@ -1,15 +1,16 @@
-.faq-section {
+.ppff-section {
   max-width: 900px;
   margin: 40px auto;
   padding: 0 20px;
-  background-color: #b4e5af;
+  
 
-  .faq-item {
-    background-color: #f9f9f9;
+  .ppff-item {
+    background-color: #b4e5af;
     border-radius: 8px;
     margin-bottom: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     overflow: hidden;
+   
 
     summary {
       font-weight: bold;
