--- a/styles/style.css
+++ b/styles/style.css
@@ -193,7 +193,7 @@ input[type=submit]:hover {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   padding: 15px;
   margin-bottom: 20px;
-  max-width: 800px;
+  max-width: 100%;
   transition: transform 0.3s ease;
 }
 .producto:hover {
