cambios en formulario de contacto

--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -10,3 +10,6 @@ $fuente-principal: "Oswald", sans-serif;
 
 $breakpoint-tablet: 768px;
 $breakpoint-mobile: 480px;
+
+$form-bg: #f9f9f9;
+$primary-color: #006400;
