--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -11,4 +11,5 @@
 @import  '../scss/components/form';
 @import '../scss/components/productos';
 @import '../scss/components/beneficios';
+@import '../scss/components/formulario';
 @import  '../scss/mediaqueries';
