--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -6,10 +6,10 @@
 @import  '../scss/Layout/footer';
 @import  '../scss/Layout/header';
 @import  '../scss/Layout/ppff';
+@import  '../scss/Layout/formulario';
 
 @import  '../scss/components/tarjetas';
 @import  '../scss/components/form';
 @import '../scss/components/productos';
 @import '../scss/components/beneficios';
-@import '../scss/components/formulario';
 @import  '../scss/mediaqueries';
