cambios en formulario de contacto3

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -6,7 +6,7 @@
 @import  '../scss/Layout/footer';
 @import  '../scss/Layout/header';
 @import  '../scss/Layout/ppff';
-@import  '../scss/Layout/formulario';
+@import  '../scss/Layout/Formulario';
 
 @import  '../scss/components/tarjetas';
 @import  '../scss/components/form';
