cambios en formulario de contacto9

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -6,6 +6,7 @@
 @import  '../scss/Layout/footer';
 @import  '../scss/Layout/header';
 @import  '../scss/Layout/ppff';
+@import  '../scss/Layout/sobrenosotros_principal';
 
 
 @import  '../scss/components/tarjetas';
