cambiar de lugar carpeta sass

--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -12,6 +12,8 @@ footer {
   .pie_de_pagina {
     @include flex(space-between);
     padding: 20px;
+    flex-direction: column;
+    align-items: center;
 
     &_grid {
       display: grid;
