--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,8 @@ footer .pie_de_pagina {
   align-items: center;
   flex-wrap: nowrap;
   padding: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 footer .pie_de_pagina_grid {
   display: grid;
