cambiar de lugar carpeta sass3

--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -4,6 +4,10 @@ header {
     color: antiquewhite;
     background-color: rgba(0, 0, 0, 0.4);
   }
+  
+  h1{
+    display: none;
+  }
 
   ul {
     list-style: none;
