--- a/scss/Layout/_header.scss
+++ b/scss/Layout/_header.scss
@@ -4,7 +4,7 @@ header {
     color: antiquewhite;
     background-color: rgba(0, 0, 0, 0.4);
   }
-  
+
   h1{
     display: none;
   }
@@ -15,7 +15,7 @@ header {
     gap: 20px;
     text-align: center;
 
-    a {
+    div ul li a {
       background-color: $color-secundario;
       color: white;
       padding: 8px 20px;
