--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,15 @@ footer h3 {
 footer p, footer form {
   color: #add1b0;
 }
-footer a {
+footer .redes a {
+  font-size: 2rem;
+  margin: 0 10px;
+  color: #333;
   text-decoration: none;
+  transition: color 0.3s;
+}
+footer .redes a:hover {
+  color: #2aa850; /* o el color que uses en tu marca */
 }
 footer .Newsletter {
   background-color: darkolivegreen;
@@ -61,6 +68,9 @@ footer .pie_de_pagina_copy {
 footer .pie_de_pagina img {
   width: 30px;
 }
+footer .pie_de_pagina_grid {
+  align-items: center;
+}
 
 header .navbar {
   display: flex;
@@ -84,7 +94,7 @@ header ul {
   gap: 20px;
   text-align: center;
 }
-header ul a {
+header ul div ul li a {
   background-color: #55704D;
   color: white;
   padding: 8px 20px;
@@ -95,7 +105,7 @@ header ul a {
   text-align: center;
   text-decoration: none;
 }
-header ul a:hover {
+header ul div ul li a:hover {
   background-color: #103824;
   color: white;
 }
