--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,9 @@ header .navbar {
   color: antiquewhite;
   background-color: rgba(0, 0, 0, 0.4);
 }
+header .navbar .nav-item .nav-link {
+  color: white;
+}
 header h1 {
   display: none;
 }
@@ -94,22 +97,12 @@ header ul {
   gap: 20px;
   text-align: center;
 }
-header ul div ul li a {
-  background-color: #55704D;
-  color: white;
-  padding: 8px 20px;
-  border-radius: 6px;
-  font-weight: bold;
-  font-family: sans-serif;
-  font-size: 10px;
-  text-align: center;
-  text-decoration: none;
-}
-header ul div ul li a:hover {
+header ul:hover {
   background-color: #103824;
   color: white;
 }
-header #logo_principal {
+
+#logo_principal {
   width: 10%;
   height: auto;
   padding-right: 50px;
