--- a/scss/Layout/_footer.scss
+++ b/scss/Layout/_footer.scss
@@ -1,5 +1,7 @@
 footer {
   background-color: $color-footer;
+  margin-top: 40px;
+  padding: 1rem;
 
   h3 {
     color: $color-titulo;
@@ -8,11 +10,16 @@ footer {
   p, form {
     color: $color-footer-texto;
   }
-
+ .redes{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:10px;
+ }
  .redes a {
-  font-size: 2rem;
+  font-size: 4rem;
   margin: 0 10px;
-  color: #333;
+  color:$color-titulo;
   text-decoration: none;
   transition: color 0.3s;
 }
@@ -23,6 +30,7 @@ footer {
   .Newsletter{
     background-color: darkolivegreen;
   }
+
   .pie_de_pagina {
     @include flex(space-between);
     padding: 20px;
@@ -30,9 +38,21 @@ footer {
     align-items: center;
 
     &_grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 40px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    
+      .contactenos{
+         display: flex;
+         flex-direction: column;
+        align-items: center;
+      }
+
+      .newsletter{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     &_copy {
@@ -45,7 +65,5 @@ footer {
       width: 30px;
     }
   }
-  .pie_de_pagina_grid{
-    align-items: center;
-  }
+
 }
