--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -18,3 +18,10 @@ $form-radius: 8px;
 $form-padding: 1rem;
 $form-gap: 1rem;
 $form-label-color: #333;
+
+$color-primario-producto: #086d00;
+$color-primario-producto-hover: #0a8a00;
+$color-fondo-producto: #f6f6f6;
+$color-texto-producto: #333;
+$color-descuento-producto: green;
+$fuente-principal-producto: 'Oswald', sans-serif;
